# weaver

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  LICENSE  README.md  STATUS.md  USAGE.md  mkdocs.yml  pyproject.toml  pyrightconfig.json
.docs/audit/: ISSUE_BACKLOG.md  PAGE_LAYOUT_BLUEPRINT.md  ROADMAP_REPLAN.md  SOURCEOFARCHITECTURE.md  SPRINT_P_EXECUTION.md  SPRINT_Q_DEEP_AUDIT.md  SPRINT_Q_EXECUTION_PLAN.md  SPRINT_Q_FINAL_VALIDATION.md  SPRINT_Q_HANDOFF.md  SPRINT_Q_RISK_REGISTER.md  THE_COUNCIL_WEAVER_AUDIT.md  WORKFLOW_BLUEPRINT.md  WV-014_RUBY_VERTICAL_TEXT_SPIKE.md
.githooks/: commit-msg  pre-commit
.github/workflows/: ci.yml  pages.yml
bench/: __init__.py  generate_synthetic_fixture.py  run_acceptance_gate.py  run_performance_budgets.py
desktop/: .gitignore  Cargo.toml  README.md  tauri.conf.json
desktop/capabilities/: default.json
desktop/icons/: .gitkeep
desktop/src/: launch_config.rs  lib.rs  main.rs  sidecar.rs  webview_session.rs
docs/: AI_SLOP_PREVENTION.md  ARCHITECTURE.md  BLUEPRINT_EXECUTION_PLAN.md  CLI_WORKFLOW.md  COCKPIT_WORKFLOW.md  DECISIONS.md  DESIGN_NOTES.md  DESIGN_SYSTEM.md  ENGINEERING_STANDARDS.md  EPUB_PARSER_AUDIT.md  FEATURE_PRIORITY_MATRIX.md  FUTURE_ROADMAP.md  GO_TO_MARKET.md  INSTALL_DESKTOP.md  MAINTENANCE.md  MVP_SCOPE.md  MVP_STABILIZATION_REPORT.md  PHASE_A_UI_AUDIT.md  PHASE_B_QA_PLAN.md  PHASE_D_DOCX_EXPORT_PLAN.md  PHASE_F_PLAN.md  PRD_v2.md  PROMPT_DESIGN.md  PROVIDER_AND_MODEL_CONFIG.md  QUICKSTART.md  RC1_REPORT.md  README.md  SECURITY_AND_PERFORMANCE.md  SIDECAR_CONTRACT.md  SPRINT10_PARITY_AUDIT.md  SPRINT11A_UI_PLAN.md  SPRINT12_UI_PARITY_AUDIT.md  SPRINT13A5_SOAK_RESULT.md  SPRINT13A_DECOMMISSION_READINESS.md  SPRINT_G_RUNTIME_AUDIT.md  SPRINT_P_EXECUTION_PLAN.md  SYSTEM_ARCHITECTURE.md  TRANSLATION_PIPELINE.md  WEB_WORKFLOW.md  index.md  (+3 more)
docs/CODEMAPS/: architecture.md  backend.md  data.md  dependencies.md  frontend.md
docs/api/: qa_json_schema.md
docs/archive/: MVP_PHASE_LOG.md  SYSTEM_ARCHITECTURE.md
docs/archive/decisions/: 0004-glossary-algorithm.md  0006-global-config.md  0010-qa-json-schema.md  0011-destructive-confirmation.md  0013-epubcheck-optional-dep.md  0018-config-writer-service.md  0019-job-manager-progress-streaming.md
docs/archive/feature_plan/: 2026-05-29-web-cockpit-phase-12.md  web-architecture.md  (+1 more)
docs/decisions/: 0001-provider-interface.md  0002-ir-shape.md  0003-segment-id.md  0004-glossary-algorithm.md  0005-epub-roundtrip.md  0007-project-templates.md  0008-preview-command.md  0009-sampled-translate.md  001-docs-cleanup-and-adr-reset.md  0012-textual-tui.md  0014-questionary-wizard.md  0015-tui-aesthetic.md  0016-web-cockpit-framework.md  0017-localhost-security-model.md  002-cli-web-boundary-and-maintenance-structure.md  0020-secret-store.md  003-mvp-baseline-for-light-novel-translator.md  004-fastapi-cockpit-technical-direction.md  005-cockpit-ui-ux-direction.md  006-novel-volume-chapter-data-model.md  007-fastapi-ui-stack.md  008-translation-qa-architecture-and-severity.md  009-htmx-first-fastapi-stable-tauri-sidecar-ready.md  010-persistent-job-core-sqlite-in-process.md  011-project-terminology-consolidation.md  012-image-preview-ocr-security-gate.md  013-qa-error-severity-tier.md  014-provider-complete-primitive-and-glossary-suggestion.md  015-single-provider-config-surface.md
docs/feature_plan/: web-execution-blueprint.md
scripts/: soak_13a5.py
src/weaver/: errors.py
tests/: conftest.py
tests/fixtures/: aozora_sample.epub  synthetic_200_chapter.epub  volume_three.html  volume_two.txt
tests/integration/: test_cli_aliases_and_debug.py  test_cli_dashboard.py  test_cli_destructive_confirm.py  test_cli_doctor.py  test_cli_edit.py  test_cli_edit_phase_a.py  test_cli_epub_inspect.py  test_cli_exit_codes.py  test_cli_export_epub.py  test_cli_export_help.py  test_cli_export_markdown.py  test_cli_glossary.py  test_cli_glossary_diff.py  test_cli_glossary_phase_a.py  test_cli_healthcheck.py  test_cli_help_epilogs.py  test_cli_honorifics.py  test_cli_init_template.py  test_cli_inspect_percentages.py  test_cli_new.py  test_cli_preview.py  test_cli_secrets.py  test_cli_serve_api.py  test_cli_serve_routing.py  test_cli_state_store.py  test_cli_translate.py  test_cli_translate_batch.py  test_cli_translate_phase_a.py  test_cli_translate_sampled.py  test_cli_validate.py  test_cli_validate_epub.py  test_cli_validate_schema.py  test_runtime_random_port.py  test_web_cockpit.py
tests/unit/: test_version.py
(+405 files in other folders)
